test(refactor): using the new relation tables